test/spec_vectors/simd_i32x4_arith/fail/module_5.wat
(module (func $i32x4.neg-arg-empty (result v128) (i32x4.neg)))